package donante;

public enum Genero {
    MASCULINO,
    FEMENINO,
    NO_BINARIO
}
