package donante;

public enum TipoContacto {
    WHATSAPP,
    SMS,
    EMAIL
}
